fix header overflow bug

--- a/client/src/css/register.css
+++ b/client/src/css/register.css
@@ -1,26 +1,3 @@
-.signup-page {
-
-}
-
-.signup-page .header-welcome-text {
-  display: none;
-}
-
-.signup-page .header-sign-out {
-  display: none;
-}
-
-.signup-page .header-message {
-  padding-left: 0px;
-  margin-bottom: 0.6vw;
-}
-
-.signup-page .header-welcome img {
-  width: 101px;
-  height: 84px;
-  padding: 23px calc(8px + 0.6vw) 0px 23px;
-}
-
 .form-header {
   height: auto;
   font-size: calc(24px + 0.5vh);
